compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__enums__typech_create_enum.snap
---
source: compiler/lume_typech/src/tests/check/enums.rs
description: "enum Foo { A, B }\n\n        fn foo() {\n            let a = Foo::A;\n        }"
---

