compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__enums__typech_create_enum_param.snap
---
source: compiler/lume_typech/src/tests/check/enums.rs
description: "enum Foo { A, B(Int32) }\n\n        fn foo() {\n            let a = Foo::B(42);\n        }"
---

